GNOME Bugzilla – Bug 656438
Do not reference deprecated GI_INFO_TYPE_ERROR_DOMAIN
Last modified: 2011-08-13 08:10:54 UTC
make all-am make[1]: entrant dans le répertoire « /scratch/jhbuild/src/gjs » CC libgjs_la-context.lo CC libgjs_la-boxed.lo gi/boxed.c: In function 'type_can_be_allocated_directly': gi/boxed.c:1131:22: error: 'GI_INFO_TYPE_ERROR_DOMAIN' undeclared (first use in this function) gi/boxed.c:1131:22: note: each undeclared identifier is reported only once for each function it appears in gi/boxed.c:1111:17: warning: enumeration value 'GI_INFO_TYPE_INVALID_0' not handled in switch [-Wswitch] This is after bug 602516 got fixed.
Created attachment 193739 [details] [review] Do not reference deprecated GI_INFO_TYPE_ERROR_DOMAIN
Review of attachment 193739 [details] [review]: Yep, thanks!
Attachment 193739 [details] pushed as bee69d6 - Do not reference deprecated GI_INFO_TYPE_ERROR_DOMAIN