Do not reference deprecated GI_INFO_TYPE_ERROR_DOMAIN

https://bugzilla.gnome.org/show_bug.cgi?id=656438